[package]
name = "toolnotif"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
daemonize = "0.5.0"
signal-hook = "0.3.18"
